crash.log

[2026-03-08 18:49:25.088173] 
Traceback (most recent call last):
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 274, in _run_next_init_task
    task()
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 353, in _finalize_startup
    self._create_home_interface()
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 247, in _create_home_interface
    self.homeInterface = Daily('Daily Interface', self)
  File "D:\Workspace\SaaAssistantAca\app\view\daily.py", line 350, in __init__
    self._init_task_list_widgets()
  File "D:\Workspace\SaaAssistantAca\app\view\daily.py", line 556, in _init_task_list_widgets
    sequence = self.scheduler.get_task_sequence()
  File "D:\Workspace\SaaAssistantAca\app\view\daily.py", line 406, in __getattr__
    raise AttributeError(
AttributeError: 'Daily' object has no attribute 'scheduler'


[2026-03-08 19:07:06.177192] 
Traceback (most recent call last):
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 274, in _run_next_init_task
    task()
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 353, in _finalize_startup
    self._create_home_interface()
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 246, in _create_home_interface
    from .daily import Daily
  File "D:\Workspace\SaaAssistantAca\app\view\daily.py", line 24, in <module>
    from utils.net_utils import get_cloudflare_data, get_date_from_api, calculate_time_difference, start_cloudflare_update
ImportError: cannot import name 'start_cloudflare_update' from 'utils.net_utils' (D:\Workspace\SaaAssistantAca\utils\net_utils.py)


[2026-03-08 19:10:30.577736] 
Traceback (most recent call last):
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 274, in _run_next_init_task
    task()
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 353, in _finalize_startup
    self._create_home_interface()
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 247, in _create_home_interface
    self.homeInterface = Daily('Daily Interface', self)
  File "D:\Workspace\SaaAssistantAca\app\view\daily.py", line 367, in __init__
    from utils.net_utils import start_cloudflare_update
ImportError: cannot import name 'start_cloudflare_update' from 'utils.net_utils' (D:\Workspace\SaaAssistantAca\utils\net_utils.py)


[2026-03-08 19:15:14.527692] 
Traceback (most recent call last):
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 274, in _run_next_init_task
    task()
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 353, in _finalize_startup
    self._create_home_interface()
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 247, in _create_home_interface
    self.homeInterface = Daily('Daily Interface', self)
  File "D:\Workspace\SaaAssistantAca\app\view\daily.py", line 367, in __init__
    from utils.net_utils import start_cloudflare_update
ImportError: cannot import name 'start_cloudflare_update' from 'utils.net_utils' (D:\Workspace\SaaAssistantAca\utils\net_utils.py)


[2026-03-08 19:39:18.931779] 
Traceback (most recent call last):
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 274, in _run_next_init_task
    task()
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 353, in _finalize_startup
    self._create_home_interface()
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 246, in _create_home_interface
    from .daily import Daily
  File "D:\Workspace\SaaAssistantAca\app\view\daily.py", line 42, in <module>
    from app.modules.close_game.close_game import CloseGameModule
ModuleNotFoundError: No module named 'app.modules.close_game'


[2026-03-08 20:01:42.706029] 
Traceback (most recent call last):
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 274, in _run_next_init_task
    task()
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 353, in _finalize_startup
    self._create_home_interface()
  File "D:\Workspace\SaaAssistantAca\app\view\main_window.py", line 246, in _create_home_interface
    from .daily import Daily
  File "D:\Workspace\SaaAssistantAca\app\view\daily.py", line 48, in <module>
    from app.view.daily_view import DailyView, TaskItemWidget
  File "D:\Workspace\SaaAssistantAca\app\view\daily_view.py", line 592
    while self.activation_layout.count() > 1:
    ^^^^^
SyntaxError: expected 'except' or 'finally' block

